--- a/notebooks/gribber/gribber.ipynb
+++ b/notebooks/gribber/gribber.ipynb
@@ -22,7 +22,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Gribber` class from the `aqua` framework checks the availability of grib files in a specified directory `datadir` for a specific experiment and creates `.index` files and a `.json` file.\n",
+    "The `Gribber` class is used to integrate the `gribscan` tool within AQUA. It can be used to convert GRIB files in catalog entries so that experiments can be easily added to catalog.\n",
+    "\n",
+    "\n",
+    "It checks the availability of grib files in a specified directory `datadir` for a specific experiment and creates `.index` files and a `.json` file.\n",
     "It also automatically updates the catalog `yaml` file.\n",
     "\n",
     "It takes as input, which as to be specified in a configuration yaml file (please check `AQUA/cli/gribber/gribber_setup.tmpl`):\n",
@@ -41,16 +44,18 @@
     "We start defining the default directories to work on Levante and then apply the class with a default IFS experiment.  Please change the outdir if you want to try this notebook!\n",
     "\n",
     "Note that in this example the `datadir` is hard-coded to point to a small subset of GRIB files.\n",
-    "Note also that we're assuming that you downloaded AQUA in your `home` directory. If not, please change the `configdir` variable to point to `AQUA/config`."
+    "Note also that we're assuming that you downloaded AQUA in your `home` directory. For simplicity, this notebook use the `USER` environment variable. If not, please change the `configdir` variable to point to `AQUA/config`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = 'b382321'\n",
+    "import os\n",
+    "USER = os.getenv('USER')\n",
+    "outdir = USER\n",
     "default_dir = {'datadir': '/work/bb1153/b382289/grib-example/tco1279-orca025',\n",
     "               'tmpdir': '/scratch/b/' + outdir + '/gribscan',\n",
     "               'jsondir': '/work/bb1153/' + outdir + '/gribscan-json',\n",
@@ -68,25 +73,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Data directory: /work/bb1153/b382289/grib-example/tco1279-orca025\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> JSON directory: /work/bb1153/b382289/gribscan-json/tco1279-orca025\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Catalog directory: /work/bb1153/b382289/AQUA/config\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Gribfile wildcard: ICMGG????+*\n",
-      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Catalog file: /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml\n",
-      "2023-05-25 17:59:10 :: gribber :: WARNING  -> JSON file: /work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if indices already exist...\n",
-      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Indices already exist.\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if JSON file already exists...\n",
-      "2023-05-25 17:59:10 :: gribber :: WARNING  -> JSON file already exists.\n",
-      "2023-05-25 17:59:10 :: gribber :: INFO     -> Checking if catalog file already exists...\n",
-      "2023-05-25 17:59:10 :: gribber :: WARNING  -> Catalog file /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Data directory: /work/bb1153/b382289/grib-example/tco1279-orca025\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> JSON directory: /work/bb1153/b382076/gribscan-json/tco1279-orca025\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Catalog directory: /home/b/b382076/AQUA/config\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Gribfile wildcard: ICMGG????+*\n",
+      "2023-05-26 11:18:53 :: gribber :: WARNING  -> Catalog file: /home/b/b382076/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml\n",
+      "2023-05-26 11:18:53 :: gribber :: WARNING  -> JSON file: /work/bb1153/b382076/gribscan-json/tco1279-orca025/atm2d.json\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Checking if indices already exist...\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Checking if JSON file already exists...\n",
+      "2023-05-26 11:18:53 :: gribber :: INFO     -> Checking if catalog file already exists...\n",
+      "2023-05-26 11:18:53 :: gribber :: WARNING  -> Catalog file /home/b/b382076/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml already exists.\n"
      ]
     }
    ],
@@ -104,41 +107,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-25 17:59:19 :: create_folder :: WARNING  -> Folder /scratch/b/b382289/gribscan/tco1279-orca025 already exists\n",
-      "2023-05-25 17:59:19 :: create_folder :: WARNING  -> Folder /work/bb1153/b382289/gribscan-json/tco1279-orca025 already exists\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> Creating symlinks...\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> Searching in /work/bb1153/b382289/grib-example/tco1279-orca025...\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGG????+*\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000066 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000084 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000054 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000012 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000000 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000036 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000030 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000078 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000048 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000018 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000006 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000024 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000096 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000042 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000090 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000072 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> File /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGGhvi1+000060 already exists in /scratch/b/b382289/gribscan/tco1279-orca025\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> Block to be added to catalog file:\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> {'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382289/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
-      "2023-05-25 17:59:19 :: gribber :: WARNING  -> Source ICMGG_atm2d already exists in /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> Block to be added to main catalog file:\n",
-      "2023-05-25 17:59:19 :: gribber :: INFO     -> {'tco1279-orca025': {'description': 'tco1279-orca025 data', 'driver': 'yaml_file_cat', 'args': {'path': '{{CATALOG_DIR}}/tco1279-orca025.yaml'}}}\n",
-      "2023-05-25 17:59:19 :: gribber :: WARNING  -> Source tco1279-orca025 already exists                    in /work/bb1153/b382289/AQUA/config/machines/levante/catalog/IFS/main.yaml. Skipping...\n"
+      "2023-05-26 11:18:58 :: create_folder :: WARNING  -> Creating folder /scratch/b/b382076/gribscan/tco1279-orca025\n",
+      "2023-05-26 11:18:58 :: create_folder :: WARNING  -> Creating folder /work/bb1153/b382076/gribscan-json/tco1279-orca025\n",
+      "2023-05-26 11:18:58 :: gribber :: INFO     -> Creating symlinks...\n",
+      "2023-05-26 11:18:58 :: gribber :: INFO     -> Searching in /work/bb1153/b382289/grib-example/tco1279-orca025...\n",
+      "2023-05-26 11:18:58 :: gribber :: INFO     -> /work/bb1153/b382289/grib-example/tco1279-orca025/ICMGG????+*\n",
+      "2023-05-26 11:18:58 :: gribber :: INFO     -> Creating GRIB indices...\n",
+      "2023-05-26 11:19:15 :: gribber :: INFO     -> CompletedProcess(args=['gribscan-index', '-n', '1', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000060', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000078', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000090', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000012', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000036', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000006', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000072', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000096', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000018', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000066', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000024', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000084', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000000', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000048', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000054', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000042', '/scratch/b/b382076/gribscan/tco1279-orca025/ICMGGhvi1+000030'], returncode=0)\n",
+      "2023-05-26 11:19:15 :: gribber :: INFO     -> Creating JSON file...\n",
+      "2023-05-26 11:19:18 :: gribber :: INFO     -> Block to be added to catalog file:\n",
+      "2023-05-26 11:19:18 :: gribber :: INFO     -> {'driver': 'zarr', 'args': {'consolidated': False, 'urlpath': 'reference::/work/bb1153/b382076/gribscan-json/tco1279-orca025/atm2d.json'}}\n",
+      "2023-05-26 11:19:18 :: gribber :: WARNING  -> Source ICMGG_atm2d already exists in /home/b/b382076/AQUA/config/machines/levante/catalog/IFS/tco1279-orca025.yaml. Skipping...\n",
+      "2023-05-26 11:19:18 :: gribber :: INFO     -> Block to be added to main catalog file:\n",
+      "2023-05-26 11:19:18 :: gribber :: INFO     -> {'tco1279-orca025': {'description': 'tco1279-orca025 data', 'driver': 'yaml_file_cat', 'args': {'path': '{{CATALOG_DIR}}/tco1279-orca025.yaml'}}}\n",
+      "2023-05-26 11:19:18 :: gribber :: WARNING  -> Source tco1279-orca025 already exists                    in /home/b/b382076/AQUA/config/machines/levante/catalog/IFS/main.yaml. Skipping...\n"
      ]
     }
    ],
