A few comments have been added

--- a/diagnostics/tropical-rainfall-diagnostic/notebooks/ICON_histogram_plotting.ipynb
+++ b/diagnostics/tropical-rainfall-diagnostic/notebooks/ICON_histogram_plotting.ipynb
@@ -1127,6 +1127,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The function `hist_figure` has a big set of arguments.\n",
+    "\n",
+    "#### The first and major group of arguments relates to the histogram type: \n",
+    "\n",
+    "* `pdf`-histogram: `pdf=True`, also it is default value, \n",
+    "\n",
+    "* `frequency`-histogram: `frequency=True, pdf=False`,\n",
+    "\n",
+    "* `counts`-histogram: `frequency=False, pdf=False`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The second group of arguments related to the plot style:\n",
+    "\n",
+    "\n",
+    "* `smooth` (bool, True by default):     if True, smooth 2D line\n",
+    "\n",
+    "* `step` (bool, False by default):      if True, step line \n",
+    "\n",
+    "* `color_map` (bool/str, False/'viridis' by default):   if not False, color map plot"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The third set of arguments involves the figure settings:\n",
+    "\n",
+    "* `ls` (str, '-'):              The line style for the plot. \n",
+    "\n",
+    "* `ylogscale` (bool, True):     The logarithmic scale for the y-axis. \n",
+    "\n",
+    "* `xlogscale` (bool, False):    The logarithmic scale for the x-axis. \n",
+    "\n",
+    "* `color` (str, 'tab:blue'):    The color of the plot. \n",
+    "            \n",
+    "* `figsize` (float, 1):         The size of the figure. \n",
+    "\n",
+    "* `legend` (str, '_Hidden'):    The legend label for the plot. \n",
+    "\n",
+    "* `varname` (str, 'Precipitation'):    The name of the variable for the x-axis label. \n",
+    "\n",
+    "* `plot_title` (str, None):     The title of the plot.\n",
+    "            \n",
+    "* `loc` (str, 'upper right'):   The location of the legend. \n",
+    "\n",
+    "* `add/fig` (tuple, None):      Tuple of (fig, ax) to add the plot to an existing figure. / The figure object to plot on.\n",
+    "\n",
+    "* `path_to_figure` (str, None): The path to save the figure. If provided, saves the figure at the specified path."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.1 Different styles of the plots"
    ]
   },
