notebook updates to be aligned to #283

--- a/diagnostics/teleconnections/notebooks/ENSO_nino3.4.ipynb
+++ b/diagnostics/teleconnections/notebooks/ENSO_nino3.4.ipynb
@@ -32,10 +32,9 @@
     "from aqua import Reader\n",
     "from aqua.slurm import slurm\n",
     "\n",
-    "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from index import regional_mean_index, regional_mean_anomalies\n",
-    "from plots import simple_plot, cor_plot, index_plot\n",
-    "from tools import load_namelist"
+    "from teleconnections.index import regional_mean_index, regional_mean_anomalies\n",
+    "from teleconnections.plots import simple_plot, cor_plot, index_plot\n",
+    "from teleconnections.tools import load_namelist"
    ]
   },
   {
