--- a/diagnostics/teleconnections/notebooks/NAO.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO.ipynb
@@ -27,10 +27,10 @@
     "import datetime\n",
     "import sys\n",
     "from aqua import Reader\n",
-    "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from index import station_based_index\n",
-    "from plots import index_plot, reg_plot\n",
-    "from tools import load_namelist"
+    "\n",
+    "from teleconnections.index import station_based_index\n",
+    "from teleconnections.plots import index_plot, reg_plot\n",
+    "from teleconnections.tools import load_namelist"
    ]
   },
   {
