--- a/diagnostics/teleconnections/notebooks/NAO_cycle3.ipynb
+++ b/diagnostics/teleconnections/notebooks/NAO_cycle3.ipynb
@@ -19,10 +19,10 @@
     "import sys\n",
     "from aqua import Reader\n",
     "from aqua.slurm import slurm\n",
-    "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from index import station_based_index\n",
-    "from plots import index_plot, reg_plot\n",
-    "from tools import load_namelist"
+    "\n",
+    "from teleconnections.index import station_based_index\n",
+    "from teleconnections.plots import index_plot, reg_plot\n",
+    "from teleconnections.tools import load_namelist"
    ]
   },
   {
