--- a/diagnostics/teleconnections/notebooks/ENSO_nino3.4_cycle3.ipynb
+++ b/diagnostics/teleconnections/notebooks/ENSO_nino3.4_cycle3.ipynb
@@ -26,10 +26,10 @@
    "source": [
     "import sys\n",
     "from aqua import Reader\n",
-    "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from index import regional_mean_index, regional_mean_anomalies\n",
-    "from plots import simple_plot, cor_plot, index_plot\n",
-    "from tools import load_namelist"
+    "\n",
+    "from teleconnections.index import regional_mean_index, regional_mean_anomalies\n",
+    "from teleconnections.plots import simple_plot, cor_plot, index_plot\n",
+    "from teleconnections.tools import load_namelist"
    ]
   },
   {
