'fast_histogram' and 'boost_histogram' was removed from the environment. All files, which contained the references on those packages, were modified.

--- a/diagnostics/tropical-rainfall-diagnostic/notebooks/ICON_histogram_calculation.ipynb
+++ b/diagnostics/tropical-rainfall-diagnostic/notebooks/ICON_histogram_calculation.ipynb
@@ -3311,7 +3311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The function provides the opportunity to calculate the histogram with weights. Compared to standard methods, such computations are `high-speed` because they are based on `boost_histogram` and `dask_histogram` packages."
+    "##### The function provides the opportunity to calculate the histogram with weights. Compared to standard methods, such computations are `high-speed` because they are based on `dask_histogram` package."
    ]
   },
   {
