Some functions and their arguments were renamed. For example, 'variable_1' was renamed into 'model_variable', 'hist_figure' into 'histogram_plot'

--- a/diagnostics/tropical-rainfall-diagnostic/notebooks/histogram_comparison.ipynb
+++ b/diagnostics/tropical-rainfall-diagnostic/notebooks/histogram_comparison.ipynb
@@ -1609,11 +1609,11 @@
     }
    ],
    "source": [
-    "add = diag.hist_figure(hist_icon, figsize=0.8, \n",
+    "add = diag.histogram_plot(hist_icon, figsize=0.8, \n",
     "               xlogscale = True, ylogscale=True,  legend='icon')\n",
-    "diag.hist_figure(hist_ifs, smooth = True, add = add, fig=add,  color ='tab:red', \n",
+    "diag.histogram_plot(hist_ifs, smooth = True, add = add, fig=add,  color ='tab:red', \n",
     "                  xlogscale = False, legend='ifs') \n",
-    "diag.hist_figure(hist_mswep,  smooth = True, add = add, fig=add,  color ='tab:green', xlogscale = False, legend='mswep',\n",
+    "diag.histogram_plot(hist_mswep,  smooth = True, add = add, fig=add,  color ='tab:green', xlogscale = False, legend='mswep',\n",
     "                 plot_title='Tropical prec')"
    ]
   }
