--- a/diagnostics/dummy/notebooks/dummy_class_readerwrapper.ipynb
+++ b/diagnostics/dummy/notebooks/dummy_class_readerwrapper.ipynb
@@ -17,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,6 +46,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-23 16:20:31 :: Dummy :: INFO     -> Regridding resolution: r100\n",
-      "2023-06-23 16:20:31 :: Dummy :: INFO     -> Config directory: ../config\n",
-      "2023-06-23 16:20:31 :: Dummy :: INFO     -> Loading diagnostic variables from config file\n"
+      "2023-06-26 11:34:38 :: Dummy :: INFO     -> Regridding resolution: r100\n",
+      "2023-06-26 11:34:38 :: Dummy :: INFO     -> Config directory: ../config\n",
+      "2023-06-26 11:34:38 :: Dummy :: INFO     -> Loading diagnostic variables from config file\n"
      ]
     }
    ],
@@ -101,10 +105,11 @@
     "source = 'monthly'\n",
     "var = 'msl'\n",
     "\n",
-    "dummy = DummyDiagnosticWrapper(model=model, exp=exp, source=source, var=var, loglevel='INFO', configdir='../config', regrid='r100')"
+    "dummy = DummyDiagnosticWrapper(model=model, exp=exp, source=source, var=var, loglevel='INFO', diagconfigdir='../config', regrid='r100')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -112,6 +117,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -709,6 +716,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1297,6 +1305,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
