--- a/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
@@ -18,7 +18,7 @@
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
-    "from TCs_class_methods import TCs\n",
+    "from AQUA.diagnostics.tropical_cyclones.class_methods_TCs import TCs\n",
     "from aqua.util import load_yaml\n",
     "from aqua.logger import log_configure\n",
     "mainlogger = log_configure('INFO', log_name='MAIN')"
