Addresses comments on pull request

--- a/diagnostics/seaice/notebooks/seaice.ipynb
+++ b/diagnostics/seaice/notebooks/seaice.ipynb
@@ -21,47 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-29 15:16:20 :: Reader :: WARNING  -> No fixes available for model IFS, experiment tco1279-orca025-cycle3, source 2D_monthly_native\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieving IFS                 \ttco1279-orca025-cycle3\t2D_monthly_native   \n",
-      "\tProducing diagnostic for region Arctic\n",
-      "\tProducing diagnostic for region Hudson Bay\n",
-      "\tProducing diagnostic for region Southern Ocean\n",
-      "\tProducing diagnostic for region Ross Sea\n",
-      "\tProducing diagnostic for region Weddell Sea\n",
-      "\tProducing diagnostic for region Amundsen-Bellingshausen Seas\n",
-      "\tProducing diagnostic for region Pacific Ocean\n",
-      "\tProducing diagnostic for region Indian Ocean\n",
-      "Retrieving ICON                \tngc2009             \tlra-r100-monthly    \n",
-      "\tProducing diagnostic for region Arctic\n",
-      "\tProducing diagnostic for region Hudson Bay\n",
-      "\tProducing diagnostic for region Southern Ocean\n",
-      "\tProducing diagnostic for region Ross Sea\n",
-      "\tProducing diagnostic for region Weddell Sea\n",
-      "\tProducing diagnostic for region Amundsen-Bellingshausen Seas\n",
-      "\tProducing diagnostic for region Pacific Ocean\n",
-      "\tProducing diagnostic for region Indian Ocean\n",
-      "Retrieving IFS                 \ttco2559-ng5-cycle3  \t2D_monthly_0.25deg  \n",
-      "\tProducing diagnostic for region Arctic\n",
-      "\tProducing diagnostic for region Hudson Bay\n",
-      "\tProducing diagnostic for region Southern Ocean\n",
-      "\tProducing diagnostic for region Ross Sea\n",
-      "\tProducing diagnostic for region Weddell Sea\n",
-      "\tProducing diagnostic for region Amundsen-Bellingshausen Seas\n",
-      "\tProducing diagnostic for region Pacific Ocean\n",
-      "\tProducing diagnostic for region Indian Ocean\n"
+      "FDB5 binary library not present on system, disabling FDB support.\n"
      ]
     },
     {
@@ -97,9 +64,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
