Functions `save_histogram` and `load_histogram` are updated in the notebooks

--- a/diagnostics/tropical-rainfall/notebooks/ICON_histogram_calculation.ipynb
+++ b/diagnostics/tropical-rainfall/notebooks/ICON_histogram_calculation.ipynb
@@ -4299,7 +4299,7 @@
    ],
    "source": [
     "path_to_histogram='/work/bb1153/b382267/AQUA/histograms/'\n",
-    "diag.save_histogram(dataset=hist_icon, path_to_histogram=path_to_histogram, name_of_file='icon')"
+    "diag.dataset_to_netcdf(dataset = hist_icon, path_to_netcdf = path_to_histogram, name_of_file = 'icon')"
    ]
   },
   {
@@ -4768,7 +4768,7 @@
     }
    ],
    "source": [
-    "diag.load_histogram(path_to_histogram='/work/bb1153/b382267/AQUA/histograms/icon_2020-01-20T00_2020-01-20T23_histogram.pkl')"
+    "diag.open_dataset(path_to_netcdf = '/work/bb1153/b382267/AQUA/histograms/icon_2020-01-20T00_2020-01-20T23_histogram.nc')"
    ]
   },
   {
