--- a/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
@@ -2,26 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FDB5 binary library not present on system, disabling FDB support.\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'AQUA'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msys\u001b[39;00m\n\u001b[1;32m      3\u001b[0m sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39minsert(\u001b[39m0\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m../\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m# Hack to import from parent directory, to be removed\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mAQUA\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdiagnostics\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtropical_cyclones\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclass_methods_TCs\u001b[39;00m \u001b[39mimport\u001b[39;00m TCs\n\u001b[1;32m      5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39maqua\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m load_yaml\n\u001b[1;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39maqua\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlogger\u001b[39;00m \u001b[39mimport\u001b[39;00m log_configure\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'AQUA'"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
     "from AQUA.diagnostics.tropical_cyclones.class_methods_TCs import TCs\n",
     "from aqua.util import load_yaml\n",
     "from aqua.logger import log_configure\n",
-    "mainlogger = log_configure('INFO', log_name='MAIN')"
+    "#mainlogger = log_configure('INFO', log_name='MAIN')"
    ]
   },
   {
@@ -131,6 +134,18 @@
     "# load the config file\n",
     "tdict = load_yaml('../config/config_levante.yml')\n",
     "tdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialise tropical class with streaming options\n",
+    "tropical = TCs(tdict=tdict, streaming=True, stream_step=tdict['stream']['streamstep'], stream_unit=\"days\", \n",
+    "               stream_startdate=tdict['time']['startdate'], loglevel = \"WARNING\")\n",
+    "tropical.loop_streaming(tdict)"
    ]
   },
   {
@@ -454,9 +469,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TCs",
+   "display_name": "aqua",
    "language": "python",
-   "name": "tcs"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
